[package]
name = "oxiri"
version = "0.2.11"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/oxiri"
keywords = ["IRI"]
repository = "https://github.com/oxigraph/oxiri"
description = """
Simple and fast implementation of IRI validation and relative IRI resolution
"""
edition = "2021"
rust-version = "1.60"

[dependencies]
serde = { version = "1.0.166", optional = true }

[dev-dependencies]
codspeed-criterion-compat = "3.0.2"
serde_test = "1"
clap = "4"

[[bench]]
name = "lib"
harness = false

[package.metadata.docs.rs]
all-features = true
